src/_sass/_layout.scss
.main {
    min-height: 100vh;

    &__article {
        width: 100%;
        max-width: 50rem;
        margin: 0;
        padding: ($mobile-header-height + 1rem) 1rem 1rem 1rem;
        background: $article-bg;
        color: $article-color;
        @include font-size($font-size-lg);
    }
    &__nav {
        position: fixed;
        top: 0;
        right: 0;
        left: 0;
        bottom: 0;
        z-index: 2;
        pointer-events: none;
        display: flex;
        flex-flow: column nowrap;
        justify-content: space-between;
        align-items: stretch;
    }

    @media (min-width: 50rem) {
        &__article {
            padding: 2rem;
            margin: 3rem auto;
        }
    }

    @media (min-width: 65rem) {
        display: grid;
        grid-template-columns: 20rem 1fr 40rem 1fr;
        grid-template-rows: 1fr;
        grid-template-areas: "navigation space-left main space-right";
        justify-content: space-between;
        align-content: stretch;
        &__article {
            grid-area: main;
            margin-top: 3rem;
            margin-bottom: 3rem;
            padding: 2rem 1.5rem;
        }
        &__nav {
            grid-area: navigation;
            position: static;
        }
    }

    @media (min-width: 80rem) {
        grid-template-columns: 25rem 1fr 50rem 1fr;
        &__article {
            margin-top: 5rem;
            margin-bottom: 5rem;
            padding: 4rem 3rem;
        }
    }
}

.navigation {
    // mobile navigation is hidden by default
    display: none;
    &--active {
        display: block;
    }
    flex: 1 1 auto;
    pointer-events: initial;

    overflow-y: auto;
    overscroll-behavior: contain;

    padding: 1rem;
    background: $navigation-bg;
    color: $navigation-color;
    @media (min-width: 65rem) {
        display: block;
        padding: 1.5rem;
        @supports (position: sticky) {
            max-height: 100vh;
            position: sticky;
            top: 0;
        }
    }
    @media (min-width: 80rem) {
        // don't use stack here so the last element has margin bottom as well
        // this way, it has some padding to the bottom when the nav is scrolled down
        padding: 2rem;
    }

    &__section {
        margin-bottom: 2rem;
        @include stack(.5rem);
    }
    &__headline {
        @include font-size($font-size-sm);
        font-weight: $font-weight-light;
    }
    &__list {
        list-style: none;
        padding-left: 0;
        @include stack(.5rem);
    }
    &__link {
        font-weight: $font-weight-medium;
        color: inherit;
        text-decoration: none;
        &:hover,
        &:focus {
            color: inherit;
            text-decoration: underline;
        }
        &[aria-current] {
            &::before {
                content: "→"" ";
            }
        }
    }
    &__subnav {
        background: $gray-700;
        padding: .5rem 1rem;
        margin-top: .5rem;
        list-style: none;
        @include font-size($font-size-sm);
        @include stack(.5rem);
    }
    &__subnav-link {
        @extend .navigation__link;
        font-weight: $font-weight-normal;
    }
}

$hamburger-types: (
    arrow
) !default;
$hamburger-layer-color: $white;
$hamburger-padding-x: 1rem;
$hamburger-padding-y: 1rem;

@import "../../node_modules/hamburgers/_sass/hamburgers/hamburgers.scss";


.header {
    @media (min-width: 65rem) {
        display: none;
    }
    flex: 0 0 auto;
    display: flex;
    justify-content: flex-start;
    align-items: center;
    height: $mobile-header-height;
    max-height: 15vh;
    // background: linear-gradient(to bottom, rgba($white, 1) 0%, rgba($white, 1) 75%, rgba($white, 0) 100%);
    background: $navigation-bg;
    color: $white;
    pointer-events: initial;
    &__burger {
        // &.is-active:focus {
        //     outline: none;
        //     border: none;
        // }
    }
}

